# AntimagicField

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  _add_markdowns.py  main.py  pyproject.toml
.github/workflows/: release-on-merge.yml
src/: filepath2import_path.py
src/antimagic_field/: __init__.py  ai_solve.py  config.py  const.py  create_response_format.py  custom_argument_parser.py  exceptions.py  extract_constants.py  filepath2import_path.py  group2files.py  main.py  read_consts.py  save2files.py  solve_duplicates.py  transaction.py  write_consts.py
src/antimagic_field/constants/: const.py  const_base.py  previous_const.py
src/antimagic_field/str_consts/src/antimagic_field/: __init__.py  ai_solve.py  config.py  custom_argument_parser.py  filepath2import_path.py  main.py  solve_duplicates.py  write_consts.py
src/antimagic_field/str_consts/src/antimagic_field/constants/: const.py  const_base.py
src/antimagic_field/str_consts/src/antimagic_field/transform/: magic_remover.py  magic_seeker.py
src/antimagic_field/transform/: magic_remover.py  magic_seeker.py  modify_file.py  transformer.py
src/antimagic_field/utils/: formated_string2string.py
tests/: emergency_fund.py
